--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,4 +9,5 @@
     >
     <a routerLink="facesnaps" routerLinkActive="active">FaceSnaps</a>
   </nav>
+  <button routerLink="create">+</button>
 </header>
