--- a/src/app/single-face-snap/single-face-snap.component.html
+++ b/src/app/single-face-snap/single-face-snap.component.html
@@ -1,5 +1,6 @@
 <div
   class="face-snap-card"
+  *ngIf="faceSnap$ | async as faceSnap"
   [ngClass]="{ snapped: buttonText === 'oops, unSnap!' }"
 >
   <h2>{{ faceSnap.title | titlecase }}</h2>
@@ -14,7 +15,7 @@
   <p>{{ faceSnap.description }}</p>
   <p *ngIf="faceSnap.location">Photo prise à {{ faceSnap.location }}</p>
   <p>
-    <button (click)="onSnap()">{{ buttonText }}</button>
+    <button (click)="onSnap(faceSnap.id)">{{ buttonText }}</button>
     <span [ngStyle]="{ color: 'rgb(0, ' + faceSnap.snaps + ', 0)' }"
       >🤌 {{ faceSnap.snaps }}</span
     >
