--- a/src/app/core/layout/header/header.component.html
+++ b/src/app/core/layout/header/header.component.html
@@ -9,5 +9,5 @@
     >
     <a routerLink="facesnaps" routerLinkActive="active">FaceSnaps</a>
   </nav>
-  <button routerLink="create">+</button>
+  <button routerLink="facesnaps/create">+</button>
 </header>
