--- a/src/app/core/layout/landing-page/landing-page.component.html
+++ b/src/app/core/layout/landing-page/landing-page.component.html
@@ -12,7 +12,7 @@
     <button type="submit">OK!</button>
   </form>
   <img
-    ngSrc="assets/snapface.png"
+    ngSrc="/assets/snapface.png"
     alt="Snapface logo"
     height="386"
     width="668"
